--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,12 @@ a{
 }
 
 .main .timeline{
-    margin-top: 40px;
-    padding: 15px;
+    margin: 40px auto;
+    padding: 0px 100px;
     
     border: 3px black solid;
     border-radius: 5px;
     text-align: left;
-    padding: 4px 150px;
-    margin-left: 70px;
-    margin-right: 70px;
 }
 .main blockquote{
     text-align: right;
