--- a/css/styleref.css
+++ b/css/styleref.css
@@ -1,12 +1,14 @@
 *{  
     font-family: Arial, Helvetica, sans-serif;
-    background-color: lightgray;'
-    margin: 0;
+    background-color: lightgray;
 }
 body{
     margin-right: 150px ;
     margin-left: 150px ;
     margin-top: 150px;
-    
+    padding: 15px auto;
+    margin-top: 150px;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
